--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^2.4.0",
+    "@docusaurus/types": "^2.4.1",
     "@tsconfig/docusaurus": "^1.0.7",
     "prettier": "^2.8.8",
     "typescript": "~5.0.4"
