--- a/package.json
+++ b/package.json
@@ -1,44 +1,17 @@
 {
   "name": "docs",
-  "version": "0.1.0",
-  "private": true,
+  "type": "module",
+  "version": "0.0.1",
   "scripts": {
-    "build": "docusaurus build",
-    "clear": "docusaurus clear",
-    "format": "prettier --write .",
-    "dev": "docusaurus start --port 3100 --no-open",
-    "docusaurus": "docusaurus",
-    "serve": "docusaurus serve",
-    "swizzle": "docusaurus swizzle",
-    "write-heading-ids": "docusaurus write-heading-ids",
-    "write-translations": "docusaurus write-translations"
-  },
-  "browserslist": {
-    "production": [
-      ">0.5%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.4.0",
-    "@docusaurus/preset-classic": "^2.4.0",
-    "@mdx-js/react": "^1.6.22",
-    "clsx": "^1.2.1",
-    "prism-react-renderer": "^1.3.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
-  },
-  "devDependencies": {
-    "@docusaurus/module-type-aliases": "^2.4.0",
-    "@docusaurus/types": "^2.4.1",
-    "@tsconfig/docusaurus": "^1.0.7",
-    "prettier": "^2.8.8",
-    "typescript": "~5.0.4"
+    "@astrojs/starlight": "^0.6.1",
+    "astro": "^2.10.1",
+    "sharp": "^0.32.3"
   }
 }
