--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,9 @@
 # Dependencies
 /node_modules
 
-# Production
-/build
-
-# Generated files
-.docusaurus
-.cache-loader
+# Build
+/dist
+.astro
 
 # Misc
 .DS_Store
