--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.11.3",
     "sharp": "^0.33.4",
+    "starlight-links-validator": "^0.9.0",
     "tailwindcss": "^3.4.4"
   }
 }
