relicense as MIT OR Apache-2.0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docs",
-  "license": "GPL-3.0-or-later",
+  "license": "MIT OR Apache-2.0",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
